--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @use './styles/variables' as *;
+@use "sass:color";
 
 /* =========================
    RESET & GLOBAL STYLES
@@ -132,7 +133,7 @@ body {
     color: $white;
 
     &:hover {
-      background: darken($primary-color, 20%);
+      background: color.adjust($primary-color, $lightness: -20%);
     }
   }
 
